Added audio analysis code (not working yet)